# clean_crm

./: .dockerignore  .env.example  ARCHITECTURE_PLAN.md  Dockerfile  README.md  alembic.ini  compose.yaml  pyproject.toml
docs/: whatsapp_campaigns_plan.md
migrations/: env.py
migrations/versions/: 0001_initial_schema.py  0002_customers_cellphone.py  0003_campaigns_module.py  0004_add_campaign_parameters_and_media.py  0004_campaign_media.py  0005_make_customer_email_nullable.py
src/clean_crm/: __init__.py  cli.py  idk.py  main.py
src/clean_crm.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/clean_crm/application/: UseCases.py
src/clean_crm/campaigns/: __init__.py  domain.py  repositories.py  use_cases.py  ycloud.py
src/clean_crm/domain/: Entities.py  Enums.py  Repositories.py  __init__.py
src/clean_crm/infrastructure/: __init__.py  auth.py  database.py  models.py  repositories.py
src/clean_crm/infrastructure/ycloud/: __init__.py  client.py  exceptions.py  provider.py  templates.py  webhooks.py
src/clean_crm/interfaces/: __init__.py  auth.py  campaigns.py  web.py
src/clean_crm/interfaces/api/: auth.py  campaigns.py
src/clean_crm/interfaces/pages/: auth.py  workspace.py
src/clean_crm/interfaces/schemas/: auth.py  campaigns.py
src/clean_crm/templates/: base.html  campaigns.html  contacts.html  home.html  import.html  login.html  templates.html
src/clean_crm/tests/: conftest.py  test_endpoints.py  test_helpers.py  test_launch.py  test_ycloud_templates.py
